<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Material ESL Player</string>

    <string name="podcast">Podcast</string>

    <string name="downloaded">Downloaded</string>
    <string name="favorited">Favorited</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>

    <string name="synchronize_database">Synchronize database</string>

    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="more_options">More options</string>

    <string name="player_subtitle">%1$s • %2$s</string>

    <string name="download">Download</string>
    <string name="remove_download">Remove Download</string>
    <string name="remove_download_and_delete">Remove Download and delete file</string>
    <string name="open_with">Open With&#8230;</string>
    <string name="share">Share</string>
    <string name="favorite">Favorite</string>
    <string name="remove_favorite">Remove from favorites</string>

    <string name="podcast_already_downloaded">Podcast already downloaded</string>
    <string name="podcast_download_started">Podcast download started</string>
    <string name="podcast_favorited">Podcast added to your favorites</string>
    <string name="podcast_removed_from_favorites">Podcast removed from your favorites</string>
    <string name="podcast_removed_from_downloaded">Downloaded podcast removed from your download list</string>
    <string name="podcast_removed_and_deleted">Downloaded podcast was deleted</string>
    <string name="error_removing_downloaded">Error removing podcast from your downloaded list</string>
    <string name="error_removing_and_deleting">Error deleting downloaded podcast</string>
    <string name="error_removing_favorites">Error removing podcast from your favorites</string>

    <string name="slow_dialog_index">Slow dialog (%1$s)</string>
    <string name="explanation_index">Explanations (%1$s)</string>
    <string name="normal_dialog_index">Normal dialog (%1$s)</string>

    <string name="share_text">Hey! Check %1$s! It\'s awesome! Take a look at %2$s</string>

    <string name="cancel">Cancel</string>
    <string name="download_folder">Download Folder</string>
    <string name="download_folder_summary">Select a folder to store your downloads</string>

    <string name="use_cache">Store mp3 (experimental)</string>
    <string name="use_cache_summary">Store mp3 on storage when streaming</string>

    <string name="press_back_again_to_leave">Press back again to leave</string>

    <string name="there_are_no_podcasts">There are no podcasts available</string>
    <string name="there_are_no_favorites_yet">There are no favorites yet!</string>

    <string name="no_connectivity">No connectivity</string>
    <string name="error">Error</string>

    <string name="about">About</string>
    <string name="oss_licenses">Licenses</string>
    <string name="source">Source Code</string>
    <string name="about_developer">About developer</string>
    <string name="version">Version</string>

    <string name="local">Local</string>
    <string name="remote">Remote</string>
    <string name="saving">Saving...</string>
    <string name="synchronizing_local_database">Synchronizing local database</string>
    <string name="synchronization_finished">Synchronization finished!</string>
    <string name="last_synchronized_podcast">Last synchronized: %1$s</string>

    <string name="write_external_storage_permission_needed_to_cache_streaming">Write External Storage permission is needed to cache streaming</string>
    <string name="write_external_storage_permission_needed_to_download">Write External Storage permission is needed to download any podcast</string>
    <string name="write_external_storage_permission_needed_to_remove_download">Write External Storage permission is needed to remove any downloaded podcast</string>
</resources>
