<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    app:bbn_itemColorActive="@color/bottom_bar_item_active"
    app:bbn_itemColorInactive="@color/bottom_bar_item_inactive">

    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home_grey_600_24dp"
        android:title="@string/home" />

    <item
        android:id="@+id/menu_favorites"
        android:icon="@drawable/ic_favorite_grey_600_24dp"
        android:title="@string/favorites" />

    <item
        android:id="@+id/menu_downloaded"
        android:icon="@drawable/ic_file_download_grey_600_24dp"
        android:title="@string/downloaded" />

</menu>