<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <br.com.wakim.eslpodclient.podcastplayer.view.ListPlayerView
        android:id="@+id/player_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minHeight="128dp"
        android:background="?android:attr/windowBackground"
        android:visibility="gone"
        app:behavior_hideable="false"
        app:behavior_peekHeight="128dp"
        app:layout_behavior="br.com.wakim.eslpodclient.behavior.BottomSheetSnackPushBehavior"
        tools:visibility="visible">

        <LinearLayout
            android:id="@+id/player_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingPrefix">

            <LinearLayout
                android:id="@+id/ll_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/player_background"
                android:clickable="true">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingRight="72dp"
                    android:paddingStart="16dp"
                    android:paddingLeft="16dp"
                    android:paddingEnd="72dp"
                    android:ellipsize="end"
                    android:textColor="#FFF"
                    android:maxLines="2"
                    android:gravity="center_vertical"
                    style="@style/TextAppearance.AppCompat.Title"
                    tools:text="Musica com titulo muito grande para ver como o meu layout se comporta"
                    tools:ignore="MissingPrefix" />

                <TextView
                    android:id="@+id/tv_subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingRight="16dp"
                    android:paddingStart="16dp"
                    android:paddingLeft="16dp"
                    android:paddingEnd="16dp"
                    android:textColor="#B3FFFFFF"
                    style="@style/TextAppearance.AppCompat.Body1"
                    tools:text="Musica com titulo muito grande para ver como o meu layout se comporta"
                    tools:ignore="MissingPrefix" />

                <pl.charmas.android.tagview.TagView
                    android:id="@+id/tv_tags"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:paddingRight="16dp"
                    android:paddingStart="16dp"
                    android:paddingLeft="16dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="4dp"
                    android:textColor="@color/player_background"
                    style="@style/TagView"
                    app:tagColor="#B3FFFFFF"
                    tools:text="Tags tags tags tags" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/player_controls_background">

                <SeekBar
                    android:id="@+id/seek_bar"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:paddingRight="16dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="8dp"
                    android:progressTint="#fff"
                    android:secondaryProgressTint="#ddd"
                    android:thumbTint="#fff"
                    tools:progress="100"
                    tools:max="200" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginEnd="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_timer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                        android:textColor="#B3FFFFFF"
                        tools:text="05:00" />

                    <android.support.v4.widget.Space
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="1dp" />

                    <TextView
                        android:id="@+id/tv_duration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                        android:textColor="#B3FFFFFF"
                        tools:text="10:00" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_controls"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginEnd="16dp"
                    android:orientation="horizontal"
                    android:weightSum="5">

                    <ImageButton
                        android:id="@+id/ib_previous"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/previous"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        app:srcCompat="@drawable/ic_skip_previous_white_24dp"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        tools:src="@drawable/ic_skip_previous_white_24dp" />

                    <ImageButton
                        android:id="@+id/ib_pause"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/pause"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:visibility="gone"
                        app:srcCompat="@drawable/ic_pause_white_24dp"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        tools:src="@drawable/ic_pause_white_24dp" />

                    <ImageButton
                        android:id="@+id/ib_play"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/play"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        app:srcCompat="@drawable/ic_play_arrow_white_24dp"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        tools:src="@drawable/ic_play_arrow_white_24dp" />

                    <ImageButton
                        android:id="@+id/ib_stop"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/stop"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        app:srcCompat="@drawable/ic_stop_white_36dp"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        tools:src="@drawable/ic_stop_white_36dp" />

                    <ImageButton
                        android:id="@+id/ib_next"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/next"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        app:srcCompat="@drawable/ic_skip_next_white_24dp"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        tools:src="@drawable/ic_skip_next_white_24dp" />

                    <ImageButton
                        android:id="@+id/ib_overflow"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/more_options"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        app:srcCompat="@drawable/ic_more_vert_white_24dp"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        tools:src="@drawable/ic_more_vert_white_24dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    android:weightSum="3">

                    <Button
                        android:id="@+id/ib_slow_dialog"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        style="@style/Widget.AppCompat.Button.Borderless" />

                    <Button
                        android:id="@+id/ib_explanation"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        style="@style/Widget.AppCompat.Button.Borderless" />

                    <Button
                        android:id="@+id/ib_normal_dialog"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        style="@style/Widget.AppCompat.Button.Borderless" />

                </LinearLayout>
            </LinearLayout>

            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp">

                    <TextView
                        android:id="@+id/tv_script"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginEnd="16dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        fontPath="fonts/Roboto-Regular.ttf" />

                    <ProgressBar
                        android:id="@+id/pb_loading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        style="@style/Widget.AppCompat.ProgressBar" />

                </FrameLayout>
            </android.support.v4.widget.NestedScrollView>
        </LinearLayout>
    </br.com.wakim.eslpodclient.podcastplayer.view.ListPlayerView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:visibility="gone"
        android:src="@drawable/ic_play_arrow_white_24dp"
        app:layout_anchor="@+id/player_view"
        app:layout_anchorGravity="top|right" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:visibility="gone"
        android:src="@drawable/ic_pause_white_24dp"
        app:layout_anchor="@+id/player_view"
        app:layout_anchorGravity="top|right" />

    <br.com.wakim.eslpodclient.widget.LoadingFloatingActionButton
        android:id="@+id/fab_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:visibility="gone"
        android:src="@drawable/ic_loop_white_24dp"
        app:layout_anchor="@+id/player_view"
        app:layout_anchorGravity="top|right" />
</merge>